2006-10-13  Kouhei Sutou <kou@cozmixng.org>

	* rsvg-cairo-clip.c: Fix bug with scaling + clipping reported on
	cairo-devel.
	
2006-09-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* configure.in: Build the mozilla plugin using libxul in
	addition to mozilla and firefox.

2006-08-31  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.16.0
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Bug 344116. The 5 crashes I mentioned before aren't 
	reproducible. I'm enabling this code, and watching out for regressions.
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Hopefully fix --disable-gtk-doc (341421)
	* doc/Makefile.am: Ditto
	
2006-08-23  Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: Make export symbols work on OSX (bug 352512)
	* rsvg-private.h: Some preparation work for color normalization
	
2006-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* Bug 344116: Committed patch from Kouhei Sutou <kou@cozmixng.org>
	that makes librsvg use Pango-Cairo instead of PangoFT2+rendering
	text as a path. This patch is disabled for now, as it crashes on
	at least 5 known SVGs (see bug 344116)
	
2006-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c (rsvg_handle_write_impl): Have libxml2 replace entities 
	for us. This fixes a bug where style definitions don't get properly
	expanded, but causes a (2.15.x-only feature) regression when importing
	external ENTITIES.
	
2006-07-27  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.15.90
	
2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bug 348329 make gnome-print dependency optional
	* rsvg-text.c: Don't leak PangoFt2 fonts (bug 344235). This is a
	work-around for Pango bug 143542.
	* rsvg.c: Document _render_sub better (bug 346964)
	* rsvg-cairo-render.c: Ditto
	
2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Require cairo-png
	
2006-07-20  Dom Lachowicz <cinamod@hotmail.com>
